# gazebo_simulator

./: .gitignore  README.md
src/hrstek_msgs/: CMakeLists.txt  package.xml  version.md
src/hrstek_msgs/action/: PathCommand.action  PickCommand.action  TaskCommand.action
src/hrstek_msgs/include/hrstek_msgs/: hrstek_enum.hpp  hrstek_msgsConfig.h  hrstek_msgsConfig.h.in
src/hrstek_msgs/msg/: Action.msg  ActionWaitParams.msg  AgentAutoChargingMsg.msg  AgentFtptListMsg.msg  AgentFtptMsg.msg  AgentMonitorASMsg.msg  AgentMonitorAllMsg.msg  AgentMonitorMsg.msg  AgentMonitorWebMsg.msg  AgentOtherStateMsg.msg  AgentStateListMsg.msg  AllTaskSimplex2dMsg.msg  AreaManagerMonitorMsg.msg  BaseCommandMsg.msg  BatteryInfo.msg  BoolVectors.msg  CalibrationStatusMsg.msg  CanMsg.msg  CanMsgArray.msg  ChargingStationMsg.msg  ChargingStationStatusArrayMsg.msg  ChargingStationStatusMsg.msg  Circle.msg  Detection.msg  DetectionArray.msg  DetectionComplex.msg  DetectionComplexArray.msg  DetectionFieldArrayMsg.msg  DetectionFieldMsg.msg  DynamicObstModeAllMsg.msg  DynamicObstModeMsg.msg  ElevatorInfo.msg  ElevatorInfoArray.msg  EmbeddedChargingControllerMsg.msg  EmbeddedChargingStationMsg.msg  ExecMonitorMsg.msg  FactoryMonitorMsg.msg  Failure.msg  ForkCmd.msg  Frame.msg  (+62 more)
src/hrstek_msgs/script/: common.py  compress_bito_common.sh  crypto.py  getMachineCode.py  getMachineCode.sh  install.sh  ota_checkversion.sh  ota_rollback.sh  ota_update.sh  rollback.sh  update.sh
src/hrstek_msgs/srv/: AdvancedIoTestSrv.srv  AgentListSrv.srv  AgentLookupSrv.srv  AgentMonitorASSrv.srv  AgentStopSrv.srv  AreaManagerReservationSrv.srv  BatteryInfoSrv.srv  ChangeVelSrv.srv  ChargingDoneStatusSrv.srv  CheckObstacleSrv.srv  CheckReplanSrv.srv  CheckTargetRegionObstacleSrv.srv  DeadlockInfoSrv.srv  DetectionFieldArraySrv.srv  DetectionFieldSrv.srv  DeviationSrv.srv  DiscoverMasters.srv  EmptyCallSrv.srv  GetAgentStatusSrv.srv  GetGitInfoSrv.srv  GetIBStatus.srv  GetObjectPoseSrv.srv  GetParamsSrv.srv  GetRelativePoseSrv.srv  GetSlamMode.srv  GetStringSrv.srv  HslamFinishTrajectory.srv  IOInputSrv.srv  IOOutputSrv.srv  IbGlobalCmdSrv.srv  IntListSrv.srv  LabelFeatureIntensityDetectSrv.srv  LabelInteractionSrv.srv  LiftSrv.srv  LiftStatusSrv.srv  MushinyEmbeddedInterface.srv  ObdbListSrv.srv  PalletServoSrv.srv  PeripheralsCtrlSrv.srv  PointCloudNoticeSrv.srv  (+48 more)
src/hrstek_msgs/version/: version.json
src/robot/: package.xml  setup.py
src/robot/config/: pioneer_camera_2d_3d.rviz  pioneer_dual_lidar.rviz  pioneer_lidar.rviz
src/robot/launch/: gazebo_pioneer.launch.py  pioneer_3d.launch.py  pioneer_camera_2d_3d.launch.py
src/robot/robot/: battery_publisher.py  task_simplex_2d_server.py
src/robot/urdf/: pioneer2dx.sdf  pioneer2dx.urdf  pioneer2dx_dual.urdf  pioneer2dx_original.sdf
src/robot/worlds/: random_objects.world
src/yhs_can_msgs/: CMakeLists.txt  package.xml
src/yhs_can_msgs/msg/: BatteryInfo.msg
tmp/: task_simplex_2d_srv_request_command_1.txt  task_simplex_2d_srv_request_command_2.txt  test_navigation.sh  test_navigation.txt
