cmake_minimum_required(VERSION 3.8)
project(yhs_can_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/BatteryInfo.msg"
  "msg/BmsFb.msg"
  "msg/BmsFlagFb.msg"
  "msg/CtrlCmd.msg"
  "msg/CtrlFb.msg"
  "msg/FrontAngleFb.msg"
  "msg/IoCmd.msg"
  "msg/IoFb.msg"
  "msg/LfWheelFb.msg"
  "msg/LrWheelFb.msg"
  "msg/RearAngleFb.msg"
  "msg/RfWheelFb.msg"
  "msg/RrWheelFb.msg"
  "msg/SteeringCtrlCmd.msg"
  "msg/SteeringCtrlFb.msg"
  DEPENDENCIES std_msgs
)

# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
